# ai-daily

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP-用户.md  config.json.example  config.user.json  config.user.json.example  index.html  pyproject.toml  requirements.txt  search.html
archive/: index.html
docs/: extra-sections-design.md  plan.md  tech-spec.md
news-data/: fetch-2026-06-30.json  fetch-2026-07-01.json  fetch-2026-07-02.json  fetch-2026-07-03.json  fetch-2026-07-04.json  fetch-2026-07-05.json  fetch-2026-07-06.json  fetch-2026-07-07.json  fetch-2026-07-08.json  fetch-2026-07-09.json  fetch-2026-07-10.json  fetch-2026-07-11.json  fetch-2026-07-12.json  fetch-2026-07-13.json  fetch-2026-07-14.json  fetch-2026-07-15.json  fetch-2026-07-16.json  fetch-2026-07-17.json  fetch-2026-07-18.json  fetch-2026-07-19.json  fetch-2026-07-20.json  fetch-2026-07-21.json  fetch-2026-07-22.json  fetch-2026-07-23.json  fetch-2026-07-24.json  fetch-2026-07-25.json  issues-2026.json  issues-index.json  notify-2026-07-01.md  notify-2026-07-02.md  notify-2026-07-03.md  notify-2026-07-05.md  notify-2026-07-07.md  notify-2026-07-08.md  notify-2026-07-09.md  notify-2026-07-10.md  notify-2026-07-11.md  notify-2026-07-12.md  notify-2026-07-13.md  notify-2026-07-14.md  (+73 more)
prompts/: digest.md  digest_wecom.md  immediate_push.md  insights.md  score_batch.md  section_github.md  section_hackernews.md  section_hackernews_select.md
scripts/: _gen_units.py  build_pages_index.py  daily-news.tmpl  install.sh  prepare-github.ps1  publish-pages.ps1  status.sh  uninstall.sh
(+74 files in other folders)
